--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+
 # Compiled class file
 *.class
+out/
 
 # Log file
 *.log
@@ -21,3 +23,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IDE files
+.idea/
+*.iml
+
+# Thumbnails
+.DS_Store
+._*
+Thumbs.db
