--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,13 @@ dependencies {
 	runtimeOnly 'com.googlecode.soundlibs:tritonus-share:0.3.7.4'
 	runtimeOnly 'com.googlecode.soundlibs:mp3spi:1.9.5.4'
 
-	compileOnlyApi 'colt:colt:1.2.0'
+	//compileOnlyApi 'colt:colt:1.2.0'
+	api 'colt:colt:1.2.0'
+	//api 'net.sourceforge.parallelcolt:parallelcolt:0.10.1'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 test {
