Name der quickstart.md angepasst

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ site_dir: build/docs/site
 
 theme:
     name: material
-    custom_dir: docs/home_override/
+    # custom_dir: docs/home_override/
     language: de
     logo: assets/icon_64.png
     favicon: assets/icon_32.png
@@ -37,7 +37,7 @@ extra_css:
     - assets/zmstyles.css
 
 nav:
-    -   Einführung: einfuehrung.md
+    -   Einführung: index.md
     -   Schnellstart: schnellstart.md
     -   Installation: installation.md
     -   Tutorials:
